--- a/demo/placename/arctic/autocomplete/index.html
+++ b/demo/placename/arctic/autocomplete/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<form id="autocomplete-form" action="" method="get">
-		<input name="q" type="search" id="autocomplete-input" autofocus="autofocus" value="" placeholder="Arctic Placenames" size="60"/>
+		<input name="q" type="search" id="autocomplete-input" autofocus="autofocus" value="" placeholder="Arctic Placenames" size="100%"/>
 		<!-- <input id="" type="submit" value=" Search "> -->
   </form>
 	<div id="autocomplete-output"></div>
