Removed unneeded deps

--- a/demo/supercluster/index.html
+++ b/demo/supercluster/index.html
@@ -6,9 +6,9 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
-        <script src="http://cdn.jsdelivr.net/leaflet.esri/2.0/esri-leaflet.js"></script>
-        <script src="https://rawgit.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
-        <script src="https://rawgit.com/kartena/Proj4Leaflet/master/src/proj4leaflet.js"></script>
+        <script src="https://cdn.jsdelivr.net/leaflet.esri/2.0/esri-leaflet.js"></script>
+<!--        <script src="https://rawgit.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
+        <script src="https://rawgit.com/kartena/Proj4Leaflet/master/src/proj4leaflet.js"></script>-->
         <link rel="stylesheet" href="cluster.css" />
 
         <style>
