--- a/demo/supercluster/index.html
+++ b/demo/supercluster/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
-    <script type="text/javascript" src="https://yui.yahooapis.com/3.18.0/build/yui/yui-min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/yui/3.18.0/yui/yui-min.js" charset="utf-8"></script>
 
     <link rel="stylesheet" href="cluster.css" />
   </head>
