--- a/demo/supercluster/index.html
+++ b/demo/supercluster/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="cluster.css" />
   </head>
   <body>
+    <span>
+      <md-icon>subdirectory_arrow_left</md-icon><a href="https://data.npolar.no">NPDC</a><md-tooltip>Norwegian Polar Data Centre [Home]</md-tooltip>
+      <md-icon>subdirectory_arrow_left</md-icon><a href="/">Placenames map</a><md-tooltip>Placename clustering</md-tooltip>
+      <md-icon>subdirectory_arrow_left</md-icon><a href=".">Placename search</a>
+    </span>
     <div id="map"></div>
 
     <script type="text/javascript" src="https://unpkg.com/supercluster@2.3.0/dist/supercluster.min.js"></script>
