Cleaning, now in the right place

--- a/src/show/show.html
+++ b/src/show/show.html
@@ -1,7 +1,6 @@
-<!--<span><md-icon>subdirectory_arrow_left</md-icon><a href="https://data.npolar.no">NPDC</a><md-tooltip>Norwegian Polar Data Centre [Home]</md-tooltip></span>
-<span><md-icon>subdirectory_arrow_left</md-icon><a href="/">Placenames map</a><md-tooltip>Placename clustering</md-tooltip></span>
-<span><md-icon>subdirectory_arrow_left</md-icon><a href=".">Placename search</a></span>-->
-
+<span><md-icon>subdirectory_arrow_left</md-icon><a href="https://data.npolar.no">NPDC</a><md-tooltip>Norwegian Polar Data Centre [Home]</md-tooltip></span>
+<span><md-icon>subdirectory_arrow_left</md-icon><a href="//placenames.npolar.no/supercluster">Placenames map</a><md-tooltip>Placename clustering</md-tooltip></span>
+<span><md-icon>subdirectory_arrow_left</md-icon><a href=".">Placename search</a></span>
 
 <section class="app-section" layout="column" ng-controller="PlacenameMapController as ctrl">
   <div id="npolar-esri-leaflet-map" style="height:400px;" class="leaflet-map"></div>
